<resources>
    <string name="app_name">Conversor</string>
    <string name="destination_currency">Moeda de Destino</string>
    <string name="source_currency">Moeda de Origem</string>
    <string name="value_for_conversion">Valor para conversão</string>
    <string name="convert">Converter</string>
    <string name="result">Resultado</string>
    <string name="search">Buscar…</string>
    <string name="select_currency">Selecionar</string>
    <string name="converter">Conversor</string>
    <string name="sigle">AMD</string>
    <string name="name_text">Armenian Dram</string>
    <string name="r_0_00">R$ 0.00</string>
    <string name="convert_from">Converter de:</string>
    <string name="to">para:</string>
    <string name="value">Valor:</string>
    <string name="result_convert">Resultado da conversão:</string>
</resources>